--- a/productos_app/pubspec.yaml
+++ b/productos_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.2
   http: ^0.13.4
+  images_picker: ^1.2.10
   image_picker: ^0.8.4+11
 
 dev_dependencies:
