--- a/productos_app/android/app/build.gradle
+++ b/productos_app/android/app/build.gradle
@@ -43,12 +43,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.productos_app"
+        applicationId "com.octarinecode.productos"
         minSdkVersion 21
         flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 1
+        versionName "1.0.0"
     }
 
     buildTypes {
